<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Actor"
            android:id="@+id/textView"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/void_string"
            android:id="@+id/item_detail"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/firstName"
            android:id="@+id/textView2"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/void_string"
            android:id="@+id/item_first_name"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lastName"
            android:layout_gravity="left"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/void_string"
            android:id="@+id/item_last_name"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Id"
            android:layout_gravity="left"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/void_string"
            android:id="@+id/item_id"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lastUpdate"
            android:layout_gravity="left"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/void_string"
            android:id="@+id/item_last_update"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
</LinearLayout>